css/style.css
@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@700&display=swap");

:root {
  --grayishblue: hsl(237, 18%, 59%);
  --softred: hsl(345, 95%, 68%);
  --white: hsl(0, 0%, 100%);
  --darkdesaturatedblue: hsl(236, 21%, 26%);
  --verydarkblue: hsl(235, 16%, 14%);
  --verydarklueblack: black hsl(234, 17%, 12%);
}

body {
  background-color: var(--verydarkblue);
  margin: 0;
  padding: 0;
  font-size: 0.875rem;
  font-weight: 700;
  font-family: "Red Hat Text", sans-serif;
  color: var(--white);
  overflow-y: scroll;
  overflow-x: hidden;
}

.countdown {
  display: grid;
  grid-template-columns: repeat(4, 100px);
  grid-gap: 10px;
  justify-items: center;
  gap: 10px;

  margin: auto;
  width: 50%;
  align-content: center;
  justify-content: center;
  padding: 10px;
}

.countdown-timer {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 3em;
  color: var(--softred);
  grid-gap: 10px;
  row-gap: 20px;
  background: var(--darkdesaturatedblue);
  padding: 0.5em;
  border-radius: 20px;
}

.description {
  display: flex;
  flex-direction: row;
  margin: 40px;
}
.description-text {
  text-align: center;
}

.stars {
  position: absolute;
}

.container {
  margin-top: 75px;
}

.title {
  color: var(--white);
  font-size: 1.5rem;
  text-align: center;
  font-weight: 700;
}

.attribution {
  font-size: 11px;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

.hills {
  position: absolute;
  bottom: 0%;
  width: 50%;
  z-index: -2;
}

footer {
  height: 40px;
  position: fixed;
  bottom: 0%;
  width: 100%;
  background-color: #393838;
  opacity: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

ul.social-media-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
  font-size: 0;
  text-align: center;
  margin-top: 275px;
}

ul.social-media-list img {
  padding: 5px;
  border-radius: 5px;
  background-color: lightblue;
  width: 36px;
  height: 36px;
}

ul.social-media-list li {
  display: inline-block;
  margin: 3px;
}

ul.social-media-list img:hover {
  background-color: #63d1f4;
  cursor: pointer;
}

/* Media Queries */

@media (max-width: 700px) {
  section {
    padding: 10px;
  }

  .title {
    font-size: 2rem;
  }
}

@media (max-width: 500px) {
  article {
    margin: 30px;
  }
  section {
    padding: 5px;
  }

  .title {
    font-size: 2.5rem;
  }
}

